add edit and update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   </head>
 
   <body>
+    <% flash.each do |name, messages|%>
+      <%= messages %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
