--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,11 @@
 <h1>Articles listing page</h1>
 
-
-
 <table>
   <thead>
     <tr>
       <th>Title</th>
       <th>Description</th>
-      <th>Actions</th>
+      <th colspan="3" >Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -15,8 +13,19 @@
     <tr>
       <td><%= article.title %></td>
       <td><%= article.description %></td>
-      <td>Some actions</td>
+      <td><%= link_to "Show", article_path(article) %></td>
+      <td><%= link_to "Edit", edit_article_path(article) %></td>
+      <td><%= link_to "Delete", article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
     </tr>
     <% end %>
   </tbody>
 </table>
+
+<p>
+  <%= link_to "Create a new article", new_article_path %>
+</p>
+
+<p>
+  <%= link_to "Home page", root_path %> |   
+  <%= link_to "About page", about_path %>
+</p>
