--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,5 +9,38 @@
 }
 
 #logo{
-  color: white !important;
+  float: left;
+  font-size: 27.2px;
+  color: #e2d3b8;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
 }
+
+#home-container{
+  margin-top: 30px;
+}
+
+.jumbotron{
+  background-image: asset-url('writeTwo.jpeg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 425px;
+}
+
+
+html,
+body {
+  height: 100%;
+}
+
+#page-content {
+  flex: 1 0 auto;
+  background-color: #ece8df;
+}
+
+#sticky-footer {
+  flex-shrink: none;
+}
+
