--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,17 @@
-<h1>This is the home page</h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="jumbotron text-center text-white">
+      <h1 class="display-4">Welcome to Alpha Blog</h1>
+      <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+      <hr class="my-4">
+      <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+      <a class="btn btn-info btn-lg" href="#" role="button">Sign up!</a>
+    </div>
+  </div>
+</div>
 
-<p>
-  <%= link_to "About page", about_path %> &emsp;
-  <%= link_to "Articles listing", articles_path %>
-</p>
+<footer id="sticky-footer" class="py-4 bg-dark text-white">
+    <div class="container text-center">
+      <small>Copyright &copy; Your Website</small>
+    </div>
+</footer>
