style articles index page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,7 +4,7 @@
   background-color: #008AAE !important;
 }  
 
-.nav-link, .btn{
+.nav-link {
   color: #F2F7F8 !important;
 }
 
@@ -37,7 +37,7 @@ body {
 
 #page-content {
   flex: 1 0 auto;
-  background-color: #ece8df;
+  background-color: lightgrey;
 }
 
 #sticky-footer {
