--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,12 +21,16 @@
   margin-top: 30px;
 }
 
-.jumbotron{
+#home-jumbotron{
   background-image: asset-url('writeTwo.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 425px;
+}
+
+#form-layout{
+  background-color:#06b7e4;
 }
 
 
@@ -37,10 +41,9 @@ body {
 
 #page-content {
   flex: 1 0 auto;
-  background-color: lightgrey;
+  background-color: #fdf7ec;
 }
 
 #sticky-footer {
   flex-shrink: none;
 }
-
