--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,9 +1,6 @@
-<h1>Edit article</h1>
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit article</h1>
 
-<%= render 'errors'%>
+  <%= render 'forms'%>
 
-<%= render 'forms'%>
-
-<p>
-  <%= link_to "Return", articles_path %>
-</p>
+</div>
