--- a/app/views/articles/_forms.html.erb
+++ b/app/views/articles/_forms.html.erb
@@ -1,14 +1,5 @@
 <div id="page-content">
-
-  <% if @article.errors.any?%>
-    <h4>The following errors prevented the article being saved</h4>
-    <ul>
-      <% @article.errors.full_messages.each do |error_message| %>
-        <li><%= error_message %></li>
-      <% end %>
-    </ul>
-  <% end %>
-  
+  <%= render 'shared/errors' %>
   <div class="row text-white justify-content-center">
     <div class="col-10">
       <%= form_with(model: @article, class: "shadow p-3 mb-3 rounded", id: "form-layout", local: true) do |f| %>
