--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,13 +41,19 @@ body {
 
 #page-content {
   flex: 1 0 auto;
+  padding-bottom: 50px;
   background-color: #fdf7ec;
 }
 
 #sticky-footer {
   flex-shrink: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 ul {
   display:inline-table;
 }
+
