--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
         <div class="col-6 mt-4">
           <div class="card text-center shadow mb-5 bg-white rounded">
             <div class="card-header font-italic">
-              by Caio Lucena
+              by <%= @article.user.username.capitalize if @article.user %>
             </div>
             <div class="card-body">
               <div class="card-text"><%= simple_format(@article.description) %></div>
