--- a/app/views/articles/_forms.html.erb
+++ b/app/views/articles/_forms.html.erb
@@ -1,25 +1,26 @@
-<%= render 'shared/errors' %>
-
-<div class="row text-white justify-content-center">
-  <div class="col-10">
-    <%= form_with(model: @article, class: "shadow p-3 mb-3 rounded", id: "form-layout", local: true) do |f| %>
-      <div class="form-group row">
-        <%= f.label :title, class: "col-2 col-form-label " %>
-        <div class="col-10">
-          <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+<div class="container mt-4">
+  <div class="row text-white justify-content-center">
+    <div class="col-10">
+      <%= render 'shared/errors', obj: @article %>
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 rounded", id: "form-layout", local: true) do |f| %>
+        <div class="form-group row">
+          <%= f.label :title, class: "col-2 col-form-label " %>
+          <div class="col-10">
+            <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <%= f.label :description, class: "col-2 col-form-label" %>
-        <div class="col-10">
-          <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description" %>
+        <div class="form-group row">
+          <%= f.label :description, class: "col-2 col-form-label" %>
+          <div class="col-10">
+            <%= f.text_area :description, rows: 10, class: "form-control shadow rounded", placeholder: "Description" %>
+          </div>
         </div>
-      </div>
-      <div class="row justify-content-center">
-        <%= f.submit class: "btn btn-outline-light", placeholder: "Create Article"%> 
-        &ensp;
-        <%= link_to "Return", articles_path, class: "btn btn-outline-light"%>
-      </div>    
-    <% end %>
-  </div> 
+        <div class="row justify-content-center">
+          <%= f.submit class: "btn btn-outline-light", placeholder: "Create Article"%> 
+          &ensp;
+          <%= link_to "Return", articles_path, class: "btn btn-outline-light"%>
+        </div>    
+      <% end %>
+    </div> 
+  </div>
 </div>
