--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,10 @@
-<% if @article.errors.any?%> 
+<% if obj.errors.any?%> 
   <div class="row justify-content-center">
     <div class="col-10">
       <div class="alert alert-secondary alert-dismissible fade show shadow p-3 mb-3 rounded" role="alert">
         <h4 class="alert-heading text-center">The following errors prevented the article being saved</h4>
           <ul>
-            <% @article.errors.full_messages.each do |error_message| %>
+            <% obj.errors.full_messages.each do |error_message| %>
               <li><%= error_message %></li>
             <% end %>
           </ul>
