--- a/app/views/users/_forms.html.erb
+++ b/app/views/users/_forms.html.erb
@@ -18,11 +18,11 @@
         <div class="form-group row">
           <%= f.label :password, class: "col-2 col-form-label" %>
           <div class="col-10">
-            <%= f.password_field :password, rows: 10, class: "form-control shadow rounded", placeholder: "Choose a password" %>
+            <%= f.password_field :password, class: "form-control shadow rounded", placeholder: "Choose a password" %>
           </div>
         </div>
         <div class="row justify-content-center">
-          <%= f.submit class: "btn btn-outline-light", placeholder: "Create User"%> 
+          <%= f.submit "Sign Up", class: "btn btn-outline-light"%> 
           &ensp;
           <%= link_to "Return", users_path, class: "btn btn-outline-light"%>
         </div>    
