--- a/app/views/users/_forms.html.erb
+++ b/app/views/users/_forms.html.erb
@@ -22,7 +22,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <%= f.submit "Sign Up", class: "btn btn-outline-light"%> 
+          <%= f.submit(@user.new_record? ? "Sign Up" : "Update account", class: "btn btn-outline-light") %> 
           &ensp;
           <%= link_to "Return", users_path, class: "btn btn-outline-light"%>
         </div>    
