--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <h1 class="text-center mt-4 mb-4"><%= @user.username.capitalize %>'s profile </h1>
 
 
-<%= image_tag "foto.jpg", size: 150, class:"rounded-circle z-depth-2 mx-auto d-block" %>
+<%= image_tag "foto.jpg", size: 180, class:"rounded mx-auto d-block shadow" %>
 
 <h3 class="text-center mt-4">Articles</h3>
 
