--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,26 +1,26 @@
-<table>
-  <tbody>
-    <% @users.each do |user| %>
-      <div class="row justify-content-md-center">
-        <div class="col-6 mt-4">
-          <div class="card text-center shadow mb-5 bg-white rounded">
-            <div class="card-header font-italic">
-              <%= link_to user.username, user_path(user) %>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">
-                <%= link_to(image_tag("foto.jpg", size: 180,  class:"rounded mx-auto d-block shadow"), user_path(user)) %>
-              </h5>
-              <p class="card-text"><%= pluralize(user.articles.count, "article")%></p>
-              <%= link_to "View profile", user_path(user), class: "btn btn-outline-success" %>
-              <%= link_to "Edit profile", edit_user_path(user), class: "btn btn-outline-primary" %>
-            </div>
-            <div class="card-footer text-muted">
-              <small>Joined <%= time_ago_in_words(user.created_at) %> ago.</small>
-            </div>
+<h1 class="text-center mt-4">Alpha Bloggers</h1>
+
+<div class="container">
+  <% @users.each do |user| %>
+    <div class="row justify-content-md-center">
+      <div class="col-6 mt-4">
+        <div class="card text-center shadow mb-5 bg-white rounded">
+          <div class="card-header font-italic">
+            <%= link_to user.username, user_path(user) %>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">
+              <%= link_to(image_tag("foto.jpg", size: 180,  class:"rounded mx-auto d-block shadow"), user_path(user)) %>
+            </h5>
+            <p class="card-text"><%= pluralize(user.articles.count, "article")%></p>
+            <%= link_to "View profile", user_path(user), class: "btn btn-outline-success" %>
+            <%= link_to "Edit profile", edit_user_path(user), class: "btn btn-outline-primary" %>
+          </div>
+          <div class="card-footer text-muted">
+            <small>Joined <%= time_ago_in_words(user.created_at) %> ago.</small>
           </div>
         </div>
       </div>
-    <% end %>
-  </tbody>
-</table>
+    </div>
+  <% end %>
+</div>
