--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 
 <%= image_tag "foto.jpg", size: 180, class:"rounded mx-auto d-block shadow" %>
 
+<div class="text-center mt-4">
+  <%= link_to "Edit profile", edit_user_path(@user), class: "btn btn-outline-info"%>
+</div>
+
 <h3 class="text-center mt-4">Articles</h3>
 
 <%= render 'articles/article' %>
