--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,3 +10,6 @@
 <h3 class="text-center mt-4">Articles</h3>
 
 <%= render 'articles/article' %>
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
