--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,13 +18,19 @@
           <a class="dropdown-item" href="#">Something else here</a>
         </div>
       </li>
-      <% if session[:user_id].nil? %>
+      <% if logged_in? %>
         <li class="nav-item">
-          <%= link_to 'Log in', login_path, class: "nav-link" %>
+          <%= link_to current_user.username.capitalize, user_path(current_user), class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Log out', logout_path, class: "nav-link", method: :delete %>
         </li>
       <% else %>
         <li class="nav-item">
-          <%= link_to 'Log out', logout_path, class: "nav-link", method: :delete %>
+          <%= link_to 'Log in', login_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign up', signup_path, class: "nav-link" %>
         </li>
       <% end %>
     </ul>
