--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,11 +22,11 @@
 }
 
 #home-jumbotron{
-  background-image: asset-url('writeTwo.jpeg');
+  background-image: asset-url('writeT.jpeg');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 425px;
+  height: 500px;
 }
 
 #form-layout{
