--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,7 +5,7 @@
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header font-italic">
           <% if @article.user %>
-            <%= image_tag "foto.jpg", size: 50, class:"rounded-circle mx-auto d-block shadow" %>
+            <%= image_tag "foto.jpg", size: 50, class:"rounded-circle mx-auto d-block shadow mb-2" %>
             by <%= link_to @article.user.username.capitalize, @article.user, class: "text-dark" %>
           <% end %>
         </div>
